--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
 	"license": "MIT",
 	"require": {
 		"php": "^7.3",
-		"sylius/sylius": "1.7.*"
+		"sylius/sylius": "1.8.*"
 	},
 	"require-dev": {
 		"behat/behat": "^3.4",
@@ -18,10 +18,10 @@
 		"friends-of-behat/symfony-extension": "^2.0",
 		"friends-of-behat/variadic-extension": "^1.1",
 		"lakion/mink-debug-extension": "^1.2.3",
-		"phpstan/phpstan-doctrine": "^0.10",
-		"phpstan/phpstan-shim": "^0.10",
-		"phpstan/phpstan-symfony": "^0.10",
-		"phpstan/phpstan-webmozart-assert": "^0.10",
+		"phpstan/phpstan-doctrine": "^0.12",
+		"phpstan/phpstan": "^0.12",
+		"phpstan/phpstan-symfony": "^0.12",
+		"phpstan/phpstan-webmozart-assert": "^0.12",
 		"phpunit/phpunit": "^6.5",
 		"sensiolabs/security-checker": "^5.0",
 		"sylius-labs/coding-standard": "^2.0",
